hero section added with resposive design,nav menu will be updgraded at the end

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mealdb-react-router-practice-project-18",
-  "homepage": "https://mehedihasan101101.github.io/mealdb-react-router-practice-project-18/",
+  "name": "mealdb-router-18",
+  "homepage": "https://mehedihasan101101.github.io/mealdb-router-18/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
